--- a/css/style.accueil.css
+++ b/css/style.accueil.css
@@ -7,3 +7,9 @@ h1,h2,h3{
 #media{
 	float:left;
 }
+body{
+	background-image: url("../photo/background.jpg");
+}
+.container{
+	background-color: white;
+}
