--- a/css/style.accueil.css
+++ b/css/style.accueil.css
@@ -11,5 +11,5 @@ body{
 	background-image: url("../photo/background.jpg");
 }
 .container{
-	background-color: white;
+	background-color: rgba(255,255,255,0.6);
 }
