--- a/css/style.accueil.css
+++ b/css/style.accueil.css
@@ -1,5 +1,10 @@
 h1,h2,h3{
 	font-family: 'Paytone One', sans-serif;
+	text-align: center;
+	color: #2C6545;
+}
+.justify, #title {
+	text-align: justify;
 }
 #treelogo{
 	float:left;
@@ -15,5 +20,5 @@ body{
 }
 p{
 	text-align: justify;
-	font-size: 20px;
+	font-size: 18px;
 }
