--- a/css/style.menu.css
+++ b/css/style.menu.css
@@ -9,6 +9,7 @@
 .nav>li>a, .nav>li>a {
     color:white;
     background-color:#2C6545;
+    font-size: 18px;
 }
 .nav .open>a, .nav .open>a:focus, .nav .open>a:hover {
     background-color: #003D05;
